левая пенель счетов

--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -1,7 +1,7 @@
 <div class="small-12 columns">
     <div class="small-12 medium-4 large-4 columns">
         <div class="block-component">
-
+                <h3 style="margin-bottom: 10px;">Счета (3)</h3>
                 <select>
                     <option value="husker">Husker</option>
                     <option value="starbuck">Starbuck</option>
@@ -9,7 +9,7 @@
                     <option value="apollo">Apollo</option>
                 </select>
 
-            <div>
+            <div><!--
                 <div class="panel clearfix">
                     <a class="left">Acme Inc</a>
                     <span style="float: right!important;">$512.998</span>
@@ -22,6 +22,20 @@
                     <a class="left">123 warehousing</a>
                     <span style="float: right!important;">$71.232</span>
                 </div>
+                -->
+                <hr>
+                <div>
+                    <a>Компания №123</a> <span style="float: right !important; color: #6c7383">345,333 руб</span>
+                </div>
+                <hr>
+                <div>
+                    <a>Компания №1667</a> <span style="float: right !important; color: #6c7383">65,390 руб</span>
+                </div>
+                <hr>
+                <div>
+                    <a>Компания №9123</a> <span style="float: right !important; color: #6c7383">120,390 руб</span>
+                </div>
+                <hr>
             </div>
         </div>
     </div>
