--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -40,7 +40,7 @@
         <a href="javascript:void(0)" on-click="logout">Выйти</a>
         -->
         <img style="height: 48px; top:10px; position: absolute;" src="app/images/q1.png">
-        <span style=" color: white; margin-left: 55px; cursor: pointer;">Виктор Иванов</span>
+        <span style=" color: white; margin-left: 55px; cursor: pointer;">{{loginName}}</span>
         <span style=" color: white; margin-left: 55px; cursor: pointer;" on-click="logout">Выйти</span>
     </div>
 </div>
