--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,8 +1,8 @@
 <div class="dashboard-wrapper clearfix">
     <div class="small-12 small-medium-12 medium-8 columns" style="padding:0;">
         <div class="small-12 small-centered clearfix">
-            <div class="large-8 medium-8 small-12 columns" data-equalizer="left">
-                <div class="small-12 small-centered block-component notification-component">
+            <div class="large-7 medium-8 small-12 columns" data-equalizer="left">
+                <div class="small-12 small-centered block-component notification-component" style="height: 296px">
                     <h3 class="block-component-header">
                         Уведомления (12)
                     </h3>
@@ -18,7 +18,7 @@
                                 </div>
                                 <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                     <div class="notification-message-text">
-                                        <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                     </div>
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                     <div class="notification-message-text">
-                                        <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                     </div>
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                     <div class="notification-message-text">
-                                        <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                     </div>
                                 </div>
                             </div>
@@ -75,11 +75,11 @@
 
                 </div>
             </div>
-            <div class="large-4 medium-4 small-12 columns" data-equalizer-watch="left">
+            <div class="large-5 medium-4 small-12 columns" data-equalizer-watch="left">
                 <div class="small-12 small-centered block-component clearfix summary-component">
 
                     <div class="small-12 medium-12 large-12 columns">
-                        <h3>Общая сумма</h3>
+                        <h3>Общая сумма выплат</h3>
                         <div class="cash-number">
                             <b>345,333 руб.</b>
                             <small>13, 544 счетов</small>
@@ -87,7 +87,7 @@
                     </div>
                     <hr style="padding-top: 20px;">
                     <div class="small-12 medium-12 large-12 columns">
-                        <h3>Прибыль</h3>
+                        <h3>Прибыль за период</h3>
                         <div class="cash-number">
                             <b style="color: #0091da">23,119 руб.</b>
                             <small>9,45% средняя скидка </small>
