выравниваю поиск справа начинаю делать инфо по аккаунту

--- a/app/templates/pages/get.html
+++ b/app/templates/pages/get.html
@@ -3,7 +3,7 @@
     <div class="small-12 medium-12 large-6 columns">
         <h3>Полученные предложения</h3>
     </div>
-    <div class="small-12 medium-12 large-6 columns">
+    <div class="small-12 medium-12 large-6 columns" style="padding-right: 0px;">
         <input type="text" placeholder="Поиск"/>
     </div>
     <hr>
