--- a/app/templates/pages/account-info.html
+++ b/app/templates/pages/account-info.html
@@ -1,4 +1,6 @@
 <div class="small-12 account-info block-component clearfix">
+
+    <h3>Счёт</h3>
     <div class="large-6 medium-6 small-12 columns">
         <div class="inner-account-info">
             <h4>ЗАО «Стройтехинжиниринг»</h4>
