--- a/app/templates/pages/aprove.html
+++ b/app/templates/pages/aprove.html
@@ -2,7 +2,7 @@
     <div class="small-12 medium-12 large-6 columns">
         <h3>Подтверждённые поставщиком</h3>
     </div>
-    <div class="small-12 medium-12 large-6 columns">
+    <div class="small-12 medium-12 large-6 columns" style="padding-right: 0px;">
         <input type="text" placeholder="Поиск"/>
     </div>
     <hr>
