--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -3,13 +3,13 @@
         <div class="block-component">
                 <h3 style="margin-bottom: 10px;">Счета (3)</h3>
                 <select>
-                    <option value="husker">Husker</option>
-                    <option value="starbuck">Starbuck</option>
-                    <option value="hotdog">Hot Dog</option>
-                    <option value="apollo">Apollo</option>
+                    <option value="husker">Группа</option>
+                    <option value="starbuck">Компания №123</option>
+                    <option value="hotdog">Компания №1667</option>
+                    <option value="apollo">Компания №9123</option>
                 </select>
 
-            <div><!--
+            <div style="font-family: robotoRegular;"><!--
                 <div class="panel clearfix">
                     <a class="left">Acme Inc</a>
                     <span style="float: right!important;">$512.998</span>
@@ -24,15 +24,15 @@
                 </div>
                 -->
                 <hr>
-                <div>
+                <div style="margin-bottom: 20px">
                     <a>Компания №123</a> <span style="float: right !important; color: #6c7383">345,333 руб</span>
                 </div>
                 <hr>
-                <div>
+                <div style="margin-bottom: 20px">
                     <a>Компания №1667</a> <span style="float: right !important; color: #6c7383">65,390 руб</span>
                 </div>
                 <hr>
-                <div>
+                <div style="margin-bottom: 20px">
                     <a>Компания №9123</a> <span style="float: right !important; color: #6c7383">120,390 руб</span>
                 </div>
                 <hr>
