--- a/app/templates/pages/common-panel.html
+++ b/app/templates/pages/common-panel.html
@@ -10,8 +10,8 @@
     </p>
     {{#dashboardRange}}
     <p class="range-interval">
-        <input type="date"/>
-        <input type="date"/>
+        <span>c</span><input type="date"/>
+        <span>по</span><input type="date"/>
     </p>
     {{/dashboardRange}}
 </div>
