исправил ссылки со страницы уведомлений логотип чуть вниз

--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -6,7 +6,7 @@
             <!--
             <h3>KPMG</h3>
             -->
-            <img style="height: 35px;" src="app/images/KPMG-logo.png">
+            <img style="height: 35px; margin-top: 10px;" src="app/images/KPMG-logo.png">
             <h4 class="subheader">Казначейская платформа</h4>
         </div>
 
