--- a/app/templates/pages/notifications.html
+++ b/app/templates/pages/notifications.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">Есть новые предложения от поставщиков, ожидающие подтверждения</a>
+                                    <a href="#notifications">Есть новые предложения от поставщиков, ожидающие подтверждения</a>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">Получено сообщение от поставщика ООО «ЗаботаПлюс»</a>
+                                    <a href="#notifications">Получено сообщение от поставщика ООО «ЗаботаПлюс»</a>
                                 </div>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                    <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">сть новые предложения от поставщиков, ожидающие подтверждения</a>
+                                    <a href="#notifications">сть новые предложения от поставщиков, ожидающие подтверждения</a>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                    <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">Получено сообщение от поставщика ООО «ЗаботаПлюс»</a>
+                                    <a href="#notifications">Получено сообщение от поставщика ООО «ЗаботаПлюс»</a>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                 <div class="notification-message-text">
-                                    <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                    <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                 </div>
                             </div>
                         </div>
