названия на странице счёта

--- a/app/templates/pages/account-info.html
+++ b/app/templates/pages/account-info.html
@@ -15,8 +15,8 @@
             <span style="color: #464e61; font-family: robotoBold; font-size: 16pt;">ЗАО «Стройтехинжиниринг»</span>
             <div style="margin-top: 30px; font-family: robotoRegular; color: #a2aabf">
                 <p>Номер счета: {{accountNumber}}</p>
-                <p>supplier: {{supplierId}}</p>
-                <p>Деньги: {{money}} рублей</p>
+                <p>Поставщик: {{supplierId}}</p>
+                <p>Сумма счёта: {{money}} рублей</p>
                 <p>Скидка: {{discount}}</p>
             </div>
         </div>
