--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -46,7 +46,7 @@
                     <ul class="inner-tabs">
                         <li><a href="#accounts/new" style="padding-top: 20px; border-top-left-radius: 9px; border-bottom-left-radius: 9px;">Новые</a></li>
                         <li><a href="#accounts/get">Полученные<br/>предложения</a></li>
-                        <li><a href="#accounts/aprove">Подтверденные<br/> поставщиком</a></li>
+                        <li><a href="#accounts/aprove">Подтвержденные<br/> поставщиком</a></li>
                         <li><a href="#accounts/resolve" style="padding-top: 20px;">Финализированные</a></li>
                     </ul>
                 </div>
