--- a/app/templates/pages/aprove.html
+++ b/app/templates/pages/aprove.html
@@ -12,9 +12,7 @@
     </div>
     <hr>
     <div class="small-4 large-12 columns">
-        <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
-        <a href="#accounts/new" class="button btn-info" >Предоставить скидку</a>
-        <a href="#accounts/new" class="button btn-info" >Удалить</a>
+        <a href="#accounts/new" class="button btn-info">Финализировать</a>
     </div>
 
 
