--- a/app/templates/pages/aprove.html
+++ b/app/templates/pages/aprove.html
@@ -12,7 +12,7 @@
     </div>
     <hr>
     <div class="small-4 large-12 columns">
-        <a href="#accounts/new" class="button btn-info">Финализировать</a>
+        <a href="#accounts/aprove" class="button btn-info">Финализировать</a>
     </div>
 
 
