--- a/app/templates/pages/get.html
+++ b/app/templates/pages/get.html
@@ -13,8 +13,8 @@
     </div>
     <hr>
     <div class="small-4 large-12 columns">
-        <a href="#accounts/new" class="button btn-info">Подтвердить</a>
-        <a href="#accounts/new" class="button btn-info" >Отклонить</a>
+        <a href="#accounts/get" class="button btn-info">Подтвердить</a>
+        <a href="#accounts/get" class="button btn-info" >Отклонить</a>
     </div>
 
 
