--- a/app/templates/pages/auth.html
+++ b/app/templates/pages/auth.html
@@ -15,6 +15,18 @@
     </div>
     <div class="auth-form small-10 small-centered">
         <div class="inner-form">
+
+            <div class="row clearfix">
+                <div class="small-6 columns" style="padding: 0;">
+                    <input id="radio1" checked name="typeUser" type="radio"/>
+                    <label for="radio1"> Поставщик</label>
+                </div>
+                <div class="small-6 columns" style="padding: 0;">
+                    <input id="radio2" name="typeUser" type="radio"/>
+                    <label for="radio2"> Покупатель</label>
+                </div>
+            </div>
+
             <div class="row">
                 <input id="loginInput" type="text" placeholder="Введите ваш логин"/>
             </div>
