--- a/app/templates/pages/new.html
+++ b/app/templates/pages/new.html
@@ -12,9 +12,14 @@
     </div>
     <hr>
     <div class="small-4 large-12 columns">
-        <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
-        <a href="#accounts/new" class="button btn-info" >Предоставить скидку</a>
-        <a href="#accounts/new" class="button btn-info" >Удалить</a>
+        {{#if customer}}
+            <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
+            <a href="#accounts/new" class="button btn-info" >Удалить</a>
+        {{else}}
+            <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
+            <a href="#accounts/new" class="button btn-info" >Предоставить скидку</a>
+            <a href="#accounts/new" class="button btn-info" >Удалить</a>
+        {{/if}}
     </div>
 
 
