--- a/app/templates/pages/new.html
+++ b/app/templates/pages/new.html
@@ -14,7 +14,7 @@
     <div class="small-4 large-12 columns">
         {{#if customer}}
             <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
-            <a href="#accounts/new" class="button btn-info" >Удалить</a>
+            <a href="#accounts/new" class="button btn-info" on-click="removeAccount">Удалить</a>
         {{else}}
             <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
             <a href="#accounts/new" class="button btn-info" >Предоставить скидку</a>
