--- a/app/templates/pages/aprove.html
+++ b/app/templates/pages/aprove.html
@@ -1,6 +1,10 @@
 <div class="small-12 clearfix block-component">
     <div class="small-12 medium-12 large-6 columns">
-        <h3>Подтверждённые поставщиком</h3>
+        {{#if customer}}
+            <h3>Подтверждённые поставщиком</h3>
+        {{else}}
+            <h3>Подтверждённые</h3>
+        {{/if}}
     </div>
     <div class="small-12 medium-12 large-6 columns" style="padding-right: 0px;">
         <input type="text" placeholder="Поиск"/>
@@ -12,7 +16,9 @@
     </div>
     <hr>
     <div class="small-4 large-12 columns">
-        <a href="#accounts/aprove" class="button btn-info">Финализировать</a>
+        {{#if customer}}
+            <a href="#accounts/aprove" class="button btn-info" on-click="finalAccount">Финализировать</a>
+        {{/if}}
     </div>
 
 
