удаляю свободные денежные средства у поставщиков к покупателя средства задаются

--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -53,7 +53,7 @@
                         <ul class="inner-tabs">
                             <li><a href="#accounts/new" style="padding-top: 20px; border-top-left-radius: 9px; border-bottom-left-radius: 9px;">Новые</a></li>
                             <li><a href="#accounts/aprove" style="padding-top: 20px;">Подтвержденные</a></li>
-                            <li><a href="#accounts/resolve" style="padding-top: 20px;">Финализированные</a></li>
+                            <li><a href="#accounts/resolve">Финализированные <br> покупателем</a></li>
                         </ul>
                     {{/if}}
                 </div>
