--- a/app/templates/pages/aprove.html
+++ b/app/templates/pages/aprove.html
@@ -10,11 +10,15 @@
         <input type="text" placeholder="Поиск"/>
     </div>
     <hr>
-    <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
-        font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
-        Свободные денежные средства: <span style="color: #0085d4">345,333 руб</span>
-    </div>
-    <hr>
+
+    {{#if customer}}
+        <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
+            font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
+            Свободные денежные средства: <span style="color: #0085d4">{{totalMoney}} руб</span>
+        </div>
+        <hr>
+    {{/if}}
+
     <div class="small-4 large-12 columns">
         {{#if customer}}
             <a href="#accounts/aprove" class="button btn-info" on-click="finalAccount">Финализировать</a>
