--- a/app/templates/pages/new.html
+++ b/app/templates/pages/new.html
@@ -6,11 +6,14 @@
         <input type="text" placeholder="Поиск"/>
     </div>
     <hr>
-    <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
-        font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
-        Свободные денежные средства: <span style="color: #0085d4">{{totalMoney}} руб</span>
-    </div>
-    <hr>
+    {{#if customer}}
+        <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
+            font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
+                Свободные денежные средства: <span style="color: #0085d4">{{totalMoney}} руб</span>
+        </div>
+        <hr>
+    {{/if}}
+
     <div class="small-4 large-12 columns">
         {{#if customer}}
             <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
