--- a/app/templates/pages/resolve.html
+++ b/app/templates/pages/resolve.html
@@ -11,11 +11,13 @@
         <input type="text" placeholder="Поиск"/>
     </div>
     <hr>
-    <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
-        font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
-        Свободные денежные средства: <span style="color: #0085d4">345,333 руб</span>
-    </div>
-    <hr>
+    {{#if customer}}
+        <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
+            font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
+            Свободные денежные средства: <span style="color: #0085d4">{{totalMoney}} руб</span>
+        </div>
+        <hr>
+    {{/if}}
 
     <div class="small-12 columns">
         <div class="js-grid"></div>
