--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -3,6 +3,7 @@
         <div class="small-12 small-centered clearfix">
             <div class="large-7 medium-8 small-12 columns" data-equalizer="left">
 
+                {{#if customer}}
                 <div class="small-12 small-centered block-component notification-component" style="height: 350px">
                     <h3 class="block-component-header">
                         Установка доходности
@@ -28,10 +29,68 @@
                     <div class="large-12 columns text-center">
                         <a class="button" on-click='approve'>Подтвердить</a>
                     </div>
-
-
-
                 </div>
+                {{else}}
+
+
+                    <div class="small-12 small-centered block-component notification-component" style="height: 296px">
+                        <h3 class="block-component-header">
+                            Уведомления (12)
+                        </h3>
+                        <hr>
+                        <div>
+                            <div style="position: relative">
+                                <div class="notification-label" style="background-color: #02a2a0"></div>
+                                <div class="notification-message">
+                                    <div class="small-12 small-medium-12 medium-12 columns">
+                                        <div class="notification-message-time">
+                                            14:45 12.02.2016
+                                        </div>
+                                    </div>
+                                    <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                        <div class="notification-message-text">
+                                            <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                            <div style="position: relative">
+                                <div class="notification-label" style="background-color: #6f2079"></div>
+                                <div class="notification-message">
+                                    <div class="small-12 small-medium-12 medium-12 columns">
+                                        <div class="notification-message-time">
+                                            14:45 12.02.2016
+                                        </div>
+                                    </div>
+                                    <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                        <div class="notification-message-text">
+                                            <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                            <div style="position: relative">
+                                <div class="notification-label" style="background-color: #0191da"></div>
+                                <div class="notification-message">
+                                    <div class="small-12 small-medium-12 medium-12 columns">
+                                        <div class="notification-message-time">
+                                            14:45 12.02.2016
+                                        </div>
+                                    </div>
+                                    <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                        <div class="notification-message-text">
+                                            <a href="#notifications">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+
+                {{/if}}
 
             </div>
             <div class="large-5 medium-4 small-12 columns" data-equalizer-watch="left">
@@ -56,7 +115,8 @@
             </div>
         </div>
 
-        <div class="large-12 medium-8 small-12 columns" data-equalizer="left">
+        {{#if customer}}
+            <div class="large-12 medium-8 small-12 columns" data-equalizer="left">
 
             <div class="small-12 small-centered block-component notification-component" style="height: 296px">
                 <h3 class="block-component-header">
@@ -116,7 +176,7 @@
             </div>
 
         </div>
-
+        {{/if}}
 
         <div class="small-12 small-centered clearfix">
             <div class="small-12 columns">
